WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113937
WebSpeech: crash at WebCore::SpeechSynthesis::speak
https://bugs.webkit.org/show_bug.cgi?id=113937
Summary
WebSpeech: crash at WebCore::SpeechSynthesis::speak
chris fleizach
Reported
2013-04-04 08:50:47 PDT
WebKit crashes when you send speechSynthesis.speak() a string value instead of a SpeechSynthesisUtterance object. speechSynthesis.speak('Hello World'); * BACKTRACE ('>' indicates stack frame used for CrashTracer aggregation)
> 1 com.apple.WebCore 0x7fff84612eb2 WebCore::SpeechSynthesis::speak(WebCore::SpeechSynthesisUtterance*) + 0x92
2 com.apple.WebCore 0x7fff8435a91e WebCore::jsSpeechSynthesisPrototypeFunctionSpeak(JSC::ExecState*) + 0xce 3 0x00004830df601045 0 + 79374743244869 4 com.apple.JavaScriptCore 0x7fff902fda78 JSC::Interpreter::execute(JSC::EvalExecutable*, JSC::ExecState*, JSC::JSValue, JSC::JSScope*) + 0x5a8 5 com.apple.JavaScriptCore 0x7fff901e363f JSC::globalFuncEval(JSC::ExecState*) + 0x41f 6 com.apple.JavaScriptCore 0x7fff9016e1e1 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 0x241
Attachments
patch
(4.65 KB, patch)
2013-04-04 08:52 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-04-04 08:52:31 PDT
Created
attachment 196481
[details]
patch
chris fleizach
Comment 2
2013-04-04 08:53:21 PDT
adding Tim to help with review.
chris fleizach
Comment 3
2013-04-05 14:41:23 PDT
Comment on
attachment 196481
[details]
patch Thanks!
WebKit Commit Bot
Comment 4
2013-04-05 14:49:44 PDT
Comment on
attachment 196481
[details]
patch Clearing flags on attachment: 196481 Committed
r147800
: <
http://trac.webkit.org/changeset/147800
>
WebKit Commit Bot
Comment 5
2013-04-05 14:49:46 PDT
All reviewed patches have been landed. Closing bug.
James Craig
Comment 6
2013-05-13 14:42:54 PDT
<
rdar://problem/13572670
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug