Source/WebCore/Modules/speech/SpeechSynthesis.cpp
@@ -102,6 +102,9 @@ void SpeechSynthesis::startSpeakingImmediately(SpeechSynthesisUtterance* utteran
 
 void SpeechSynthesis::speak(SpeechSynthesisUtterance* utterance)
 {
+    if (!utterance)
+        return;
+    
     m_utteranceQueue.append(utterance);
     
     // If the queue was empty, speak this immediately and add it to the queue.
